crates/pane-tui/src/ui/snapshots/pane__ui__tests_tab_picker__tab_picker_filtered.snap
---
source: crates/pane-tui/src/ui/tests_tab_picker.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                                                                                                                      │
│                                                                                                                      │
│                             ╭ New Tab ─────────────────────────────────────────────────╮                             │
│                             │  sh_                                                     │                             │
│                             ├──────────────────────────────────────────────────────────┤                             │
│                             │  Shell  Default (zsh)                                    │                             │
│                             │  zsh  Z Shell                                            │                             │
│                             │  bash  Bourne Again Shell                                │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             ╰──────────────────────────────────────────────────────────╯                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ( type ) filter · ( Enter ) spawn · ( Esc ) cancel
