crates/pane-tui/src/ui/snapshots/pane__ui__tests_tab_picker__tab_picker_no_match_run_entry.snap
---
source: crates/pane-tui/src/ui/tests_tab_picker.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                                                                                                                      │
│                                                                                                                      │
│                             ╭ New Tab ─────────────────────────────────────────────────╮                             │
│                             │  docker compose up_                                      │                             │
│                             ├──────────────────────────────────────────────────────────┤                             │
│                             │  Run 'docker compose up'  Custom command  zsh            │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             ╰──────────────────────────────────────────────────────────╯                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ( type ) filter · ( Enter ) spawn · ( Esc ) cancel
