crates/pane-tui/src/ui/snapshots/pane__ui__tests_tab_picker__tab_picker_small_terminal.snap
---
source: crates/pane-tui/src/ui/tests_tab_picker.rs
expression: output
---
╭──────────────────────────────────────────────────────────╮
│  1                                                    +  │
╰──────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮
│  zsh                                                  +  │
│ ╭ New Tab ─────────────────────────────────────────────╮ │
│ │  _                                                   │ │
│ ├──────────────────────────────────────────────────────┤ │
│ │ Shells                                               │ │
│ │  Shell  Default (zsh)                                │ │
│ │  zsh  Z Shell                                        │ │
│ │  bash  Bourne Again Shell                            │ │
│ │ Editors                                              │ │
│ │  nvim  Neovim                                        │ │
│ │ System Management                                    │ │
│ │  htop  Process viewer                                │ │
│ ╰──────────────────────────────────────────────────────╯ │
│                                                          │
╰──────────────────────────────────────────────────────────╯
  type  filter ·  Enter  spawn ·  Esc  cancel
